# wacrm

./: .gitignore  CHECKLIST.md  README.md  docker-compose.yml  nginx.conf
.github/workflows/: build.yml
api/: .env.example  Dockerfile  go.mod  go.sum  main.go  schema.sql
api/config/: config.go
api/handlers/: handlers.go
api/middleware/: middleware.go
api/models/: models.go
api/services/: scheduler.go  whatsapp.go
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/src/api/: client.ts
client/src/components/: Layout.tsx
client/src/pages/: Accounts.tsx  Customers.tsx  Dashboard.tsx  Login.tsx  Messages.tsx  Register.tsx  Settings.tsx  Tasks.tsx  Templates.tsx
client/src/store/: auth.ts
docs/: SPEC.md
