[package]
name = "wacrm"
version = "1.0.0"
description = "WhatsApp CRM Desktop Client"
authors = ["WACRM Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
